--- a/tq.html
+++ b/tq.html
@@ -35,7 +35,12 @@
         <div class="row">
             <div class="col-lg-4 col-sm-9 col-xs-12 col-md-6">
                 <div class="input-group" style="display=inline-block">
-                    <input type="text" class="form-control tags input_city_name" placeholder="请输入城市名称">
+                    <!-- 增加填写错误弹出提示 -->
+                    <input id='temp' type="text" class="form-control tags input_city_name"
+                        placeholder="请输入城市名称"
+                        data-placement="bottom"
+                        data-content="请输入正确的城市名称"
+                    >
                     <span class="input-group-btn">
                         <button class="btn button_query btn-success" type="button">查询</button>
                     </span>
